@@ -1,4 +1,5 @@
 {{$NEXT}}
+          Depend on namespace::clean 0.20 to avoid bugs.
 
 0.001     2011-01-15 01:56:26 Europe/Amsterdam
           Initial release
